web/style.css
/* ... */
.centertext{
    background-color: rgba(0,0,0,0.5);
    color: white;
    font-size: 50px;
    width: 100%;
    text-align: center;
    margin: auto;
    display: inline-block;
    vertical-align: middle;
}

.img-responsive:hover {
    filter: none; /* IE6-9 */
    -webkit-filter: grayscale(0); /* Google Chrome, Safari 6+ & Opera 15+ */

}


/*//// QUESTIONS ////*/

.table-filter .media .title span.resolu {
    color: #5cb85c;
}

.table-filter .media .title span.encours {
    color: #f0ad4e;
}

.table-filter .media .title span.annule {
    color: #d9534f;
}

.content {
    width: 100%;
}
.panelbg{
    background-color: rgba(255,255,255,0.8) !important;
}
h1 {
    color: #1FA597;
}
.summary {
    text-align: left;
}
.table-filter .media-meta {
    font-size: 15px;
    color: #999;
    text-align: left;
}
.table-filter .media .title {
    color: #1FA597;
    font-size: 20px;
    font-weight: bold;
    line-height: normal;
    margin: 0;
    text-align: left;
}
.table-filter .media .title span {
    font-size: .8em;
    margin-right: 20px;
    text-align: left;
}
.btn-number {
    height: 35px;
}
.ckbox{
    display: inline-block;
}
.ckbox ul{
    list-style-type: none;
    padding: 0;
}
.ckbox li{
    text-align: center;
    display: inline-block;
    vertical-align: middle;
    margin-left:20px;
}
/*//// AJOUT ////*/
select.frecuency {
    border: none;
    font-style: italic;
    background-color: transparent;
    cursor: pointer;
    -webkit-transform: translateY(0);
    transform: translateY(0);
    -webkit-transition: -webkit-transform 3s ease-in;
    transition: -webkit-transform 3s ease-in;
    border-bottom: none;
}
select.frecuency:focus {
    outline: none;
    border-bottom: 5px solid #39b3d7;
    -webkit-transform: translateY(-5px);
    transform: translateY(-5px);
    -webkit-transition: -webkit-transform 3s ease-in;
    transition: -webkit-transform 3s ease-in;
}
.free {
    text-transform: uppercase;
    color: #1FA597;
}
.input-group {
    margin: auto;
    width: 100%;
    height: 200px;
    background-color: rgba(255,255,255,0.8) !important;
}
input {
    margin-bottom: 20px;
    margin-top: 20px;
    width: 70%;
    height: 60px;
    text-align: center;
}
textarea {
    width: 70%;
    height: 120px;
}
input.btn.btn-lg,
input.btn.btn-lg:focus {
    outline: none;
    width: 60%;
    height: 60px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    background: white;
    margin: 20px;
}
button.btn-info {
    height: 60px;
    display: flex;
    margin: auto;
    margin-top: 20px;
    margin-bottom: 20px;
}
::-webkit-input-placeholder {
    color: grey;
    opacity: 0.9 !important; /* for older chrome versions. may no longer apply. */
}

::-moz-placeholder { /* Firefox 18- */
    color: grey;
    opacity: 0.9 !important;
}

::-moz-placeholder {  /* Firefox 19+ */
    color: grey;
    opacity: 0.9 !important;
}

:-ms-input-placeholder {
    color: grey;
}
textarea {
    resize: none;
}

